--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -207,6 +207,7 @@ config_setting(name = "sig_src?", flag_values = {":sig_src": "True"})
 # label_flag( name = "primitives",
 #             build_setting_default = "//runtime:primitives")
 
+# used by all toolchains:
 string_list_flag(name = "warnings",
                  build_setting_default = [
                      # "-w", "+a-4-9-41-42-44-45-48",
