--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -7,7 +7,7 @@ load("//bzl:rules.bzl",
 
 load("//config:WARNINGS.bzl", "w")
 
-WARNINGS = [w.NAME_OUT_OF_SCOPE] # -40
+WARNINGS = [w.NAME_OUT_OF_SCOPE_40] # -40
 MODULE_OPTS = []
 
 SIG_OPTS    = []
@@ -111,7 +111,7 @@ compiler_module(
     struct = "compile.ml",
     sig    = "Compile_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//bytecomp:Bytegen",
         "//bytecomp:Emitcode",
@@ -149,7 +149,7 @@ compiler_module(
     struct = "compile_common.ml",
     sig    = "Compile_common_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//config:Config",
         "//parsing:Builtin_attributes",
@@ -262,7 +262,7 @@ compiler_module(
     name   = "Main",
     struct = "main.ml",
     opts = MODULE_OPTS,
-	warnings = [w.MISSING_MLI],
+	warnings = [w.MISSING_MLI_70],
     deps   = [
         ":Maindriver",
     ],
@@ -326,7 +326,7 @@ compiler_module(
     struct = "maindriver.ml",
     sig    = "Maindriver_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//bytecomp:Bytelibrarian",
         "//bytecomp:Bytepackager",
@@ -368,7 +368,7 @@ compiler_module(
     struct = "makedepend.ml",
     sig    = "Makedepend_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//config:Config",
         "//parsing:Depend",
@@ -417,7 +417,7 @@ compiler_module(
     struct = "optcompile.ml",
     sig    = "Optcompile_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//asmcomp:Asmgen",
         "//config:Config",
@@ -473,7 +473,7 @@ compiler_module(
     name   = "Optmain",
     struct = "optmain.ml",
     opts = MODULE_OPTS,
-	warnings = [w.MISSING_MLI],
+	warnings = [w.MISSING_MLI_70],
     deps   = [
         ":Optmaindriver",
     ],
@@ -495,7 +495,7 @@ compiler_module(
     struct = "optmaindriver.ml",
     sig    = "Optmaindriver_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//asmcomp:Asmlibrarian",
         "//asmcomp:Asmpackager",
