--- a/typing/BUILD.bazel
+++ b/typing/BUILD.bazel
@@ -208,7 +208,7 @@ compiler_module(
     name   = "Cmt2annot",
     struct = "cmt2annot.ml",
     opts = MODULE_OPTS,
-    warnings = [w.MISSING_MLI],
+    warnings = [w.MISSING_MLI_70],
     deps   = [
         "//file_formats:Cmt_format",
         "//parsing:Location",
@@ -236,7 +236,7 @@ compiler_module(
     struct = "ctype.ml",
     sig    = "Ctype_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         "//parsing:Longident",
@@ -295,7 +295,7 @@ compiler_module(
     struct = "datarepr.ml",
     sig    = "Datarepr_cmi",
     opts = MODULE_OPTS,
-	warnings = [w.NAME_OUT_OF_SCOPE],
+	warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         ":Btype",
@@ -330,7 +330,7 @@ compiler_module(
     struct = "env.ml",
     sig    = "Env_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//file_formats:Cmi_format",
         "//parsing:Builtin_attributes",
@@ -414,7 +414,7 @@ compiler_module(
     struct = "envaux.ml",
     sig    = "Envaux_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         "//utils:Lazy_backtrack",
@@ -570,7 +570,7 @@ compiler_module(
     struct = "includecore.ml",
     sig    = "Includecore_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Builtin_attributes",
         "//utils:Diffing_with_keys",
@@ -627,7 +627,7 @@ compiler_module(
     struct = "includemod.ml",
     sig    = "Includemod_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//file_formats:Cmt_format",
         "//parsing:Builtin_attributes",
@@ -696,7 +696,7 @@ compiler_module(
     struct = "includemod_errorprinter.ml",
     sig    = "Includemod_errorprinter_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         "//utils:Clflags",
@@ -749,7 +749,7 @@ compiler_module(
     struct = "mtype.ml",
     sig    = "Mtype_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         "//utils:Clflags",
@@ -786,7 +786,7 @@ compiler_module(
     struct = "oprint.ml",
     sig    = "Oprint_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Pprintast",
     ],
@@ -845,7 +845,7 @@ compiler_module(
     struct = "parmatch.ml",
     sig    = "Parmatch_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Ast_helper",
         "//parsing:Location",
@@ -1046,7 +1046,7 @@ compiler_module(
     struct = "predef.ml",
     sig    = "Predef_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Ast_helper",
         "//parsing:Location",
@@ -1161,7 +1161,7 @@ compiler_module(
     struct = "printtyp.ml",
     sig    = "Printtyp_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Location",
         "//parsing:Longident",
@@ -1308,7 +1308,7 @@ compiler_module(
     struct = "shape.ml",
     sig    = "Shape_cmi",
     opts = MODULE_OPTS,
-	warnings = [w.NAME_OUT_OF_SCOPE],
+	warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//utils:Identifiable",
         "//utils:Misc",
@@ -1341,7 +1341,7 @@ compiler_module(
     struct = "signature_group.ml",
     sig    = "Signature_group_cmi",
     opts = MODULE_OPTS,
-	warnings = [w.NAME_OUT_OF_SCOPE],
+	warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         ":Btype",
         ":Ident",
@@ -1406,7 +1406,7 @@ compiler_module(
     struct = "subst.ml",
     sig    = "Subst_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//parsing:Ast_mapper",
         "//parsing:Location",
@@ -1546,7 +1546,7 @@ compiler_module(
     struct = "typeclass.ml",
     sig    = "Typeclass_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//file_formats:Cmt_format",
         "//parsing:Ast_helper",
@@ -1610,7 +1610,7 @@ compiler_module(
     struct = "typecore.ml",
     sig    = "Typecore_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//file_formats:Cmt_format",
         "//parsing:Ast_helper",
@@ -1688,7 +1688,7 @@ compiler_module(
     struct = "typedecl.ml",
     sig    = "Typedecl_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//config:Config",
         "//parsing:Ast_helper",
@@ -1823,7 +1823,7 @@ compiler_module(
     struct = "typedecl_separability.ml",
     sig    = "Typedecl_separability_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -1983,7 +1983,7 @@ compiler_module(
     struct = "typemod.ml",
     sig    = "Typemod_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE],
+    warnings = [w.NAME_OUT_OF_SCOPE_40],
     deps   = [
         "//config:Config",
         "//file_formats:Cmi_format",
