--- a/testsuite/tests/typing-recmod/BUILD.bazel
+++ b/testsuite/tests/typing-recmod/BUILD.bazel
@@ -67,13 +67,13 @@ compile_fail_test(
     ],
 )
 
-# test_module(
-#     name   = "T01bad",
-#     struct = "t01bad.ml",
-#     opts = MODULE_OPTS,
-#     deps   = [
-#     ]
-# )
+test_module(
+    name   = "T01bad",
+    struct = "t01bad.ml",
+    opts = MODULE_OPTS,
+    deps   = [
+    ]
+)
 
 test_module(
     name   = "T02bad",
