--- a/testsuite/tests/lib-dynlink-bytecode/BUILD.bazel
+++ b/testsuite/tests/lib-dynlink-bytecode/BUILD.bazel
@@ -52,7 +52,7 @@ load("//bzl/rules:COMPILER.bzl",
 # )
 
 
-# test_executable(
+# test_executable_macro(
 #     name    = "main",
 #     main    = ":Main",
 # )
