--- a/testsuite/tests/basic-modules/BUILD.bazel
+++ b/testsuite/tests/basic-modules/BUILD.bazel
@@ -1,9 +1,8 @@
 load("//test:rules.bzl",
-     "test_executable",
+     "test_executable_macro",
      "test_library",
      "test_module",
      "test_signature",
-     "ocaml_test",
      "batch_expect_test",
      "inline_expect_test",
      "lambda_expect_test"
