--- a/testsuite/tests/lib-atomic/BUILD.bazel
+++ b/testsuite/tests/lib-atomic/BUILD.bazel
@@ -1,40 +1,45 @@
 load("//test:rules.bzl",
-     "test_executable",
-     "test_library",
+     "inline_vv_test",
+     "inline_vs_test",
+     "inline_ss_test",
+     "inline_sv_test",
+     "inline_test_macro",
      "test_module",
-     "test_signature",
-     "ocaml_test",
-     "expect_test",
-     "inline_expect_test",
-     "lambda_expect_test"
+     "test_executable"
 )
 
-
-
-load("//test:rules.bzl",
-     "test_module",
+test_suite(
+    name = "lib-atomic",
+    tests  = [":Atomic_test"]
 )
 
-# MODULE_OPTS = []
-
-# test_suite(
-#     name = "testsuite_tests_lib-atomic_lib",
-#     tests  = [
-#         ":Test_atomic",
-#     ],
-# )
-
-ocaml_test(
-    name = "atomic_test",
+inline_test_macro(
+    name = "Test_atomic_test",
     main = ":Test_atomic",
     timeout = "short"
+)
+
+# inline_vv_test(
+#     name = "Test_atomic_inline_vv_test",
+#     main = ":Test_atomic",
+#     timeout = "short"
+# )
+
+# inline_ss_test(
+#     name = "Test_atomic_inline_ss_test",
+#     main = ":Test_atomic",
+#     timeout = "short"
+# )
+
+test_executable(
+    name = "Test_atomic.byte",
+    main = ":Test_atomic"
 )
 
 test_module(
     name   = "Test_atomic",
     struct = "test_atomic.ml",
-    opts   = ["-nopervasives"],
-    deps   = [
+    stdlib_deps   = [
         "//stdlib:Stdlib",
         "//stdlib:Stdlib.Atomic"
     ]
